--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 *.pdf filter=lfs diff=lfs merge=lfs -text
 *.PDF filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
+*.PNG filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
